# LegalMind

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  WARP.md  changes.diff  docker-compose.yml  pyproject.toml
client/: .dockerignore  .env.example  .gitignore  Dockerfile  FRONTEND_DESIGN.md  README.md  eslint.config.js  index.html  jsconfig.json  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
client/scripts/: generate-arabic-font.js
client/src/: App.jsx  index.css  main.jsx  theme.js
client/src/components/: ProtectedRoute.jsx  PublicRoute.jsx
client/src/contexts/: AuthContext.jsx  Authcontext.jsx  LanguageContext.jsx
client/src/data/: egyptianLawDocuments.js
client/src/hooks/: useAuth.js  useDocumentPolling.js
client/src/lib/: api-endpoints.js  axios.js  i18n.js  pdf-export.js  queryClient.js
client/src/locales/: ar.json  en.json
client/src/pages/: Dashboard.jsx  DocumentWorkbench.jsx  EgyptianLaw.jsx  ForgotPassword.jsx  Index.jsx  LawWorkbench.jsx  Login.jsx  Pricing.jsx  (+2 more)
docs/: ARCHITECTURE.md  GRADUATION_PROJECT_ROADMAP.md  MAINTENANCE.md  SECURITY_SETUP.md  dev_guide.md
server/: .dockerignore  .env.example  Dockerfile  docker-entrypoint.sh  requirements.txt
server/accounts/: adapters.py  admin.py  models.py  models_billing.py  permissions.py  serializers.py  serializers_billing.py  urls.py  urls_billing.py  views.py  views_billing.py
server/ai_api/: admin.py  langchain_config.py  models.py  serializers.py  tasks.py  urls.py  views.py
server/config/: celery.py  settings.py  urls.py
(+39 files in other folders)
